# inet

./: .gitignore  Cargo.toml  README.md  TODO.md  client-output.pcap  example-output.pcapng  out  out.md  run-examples.sh  topo.svg.dot
_bin/: main.rs
_bin_tcp0/: Main.ndl  main.rs
_bin_tcp1/: main.rs
_bin_udp0/: main.rs
arp/: main.rs
book/: book.toml
book/book/: 404.html  core.html  overview.html  print.html  searchindex.js  searchindex.json
book/src/: SUMMARY.md  core.md  overview.md
bytepack/: Cargo.toml
bytepack/src/: lib.rs
design/: v4.md  v6.md
dhcp_bin/: Main.ndl  Main.par  main.rs
dns-tcp-bin/: main.ndl  main.par  main.rs  topo.dot
dns-tcp-bin/zonefiles/: .dns  example.org.dns  org.dns  test.org.dns
dns_bin/: Main.ndl  Main.par  main.rs
examples/: bench.sh
examples/axum/: Cargo.toml  main.ndl  main.yml
examples/axum/src/: main.rs
examples/dns-tcp-network/: .gitignore  Cargo.toml  main.ndl  main.par  main.par.yml  main.yml
examples/dns-tcp-network/src/: main.rs
examples/dns-tcp-network/zonefiles/: .dns  admin.org.dns  bund.de.dns  de.dns  example.org.dns  test.org.dns
ideal_bin/: main.md  main.ndl  main.par  main.rs
inet/: Cargo.toml  readme.md
inet-bgp/: .gitignore  Cargo.toml
inet-bgp/src/: _peering2.rs  adj_in.rs  adj_out.rs  adj_rib_out.rs  kernel.rs  lib.rs  loc_rib.rs  peering.rs  types.rs
inet-bgp/src/peering/: mod.rs  stream.rs  timers.rs  types.rs
inet-bgp/src/pkt/: attrs.rs  error.rs  mod.rs
inet-bgp/tests/: semi-passiv-estab.rs  simulaneous-estab.rs
inet-bin/: edge.rs  main.rs  networks.rs  routers.rs
inet-dns/: Cargo.toml
inet-dns-2/: Cargo.toml
inet-dns-2/rfc/: rfc1034.txt
inet-dns-2/tests/: lookup.rs  parsing.rs
inet-dns/src/: lib.rs  zonefile.rs
inet-dns/tests/: basic.rs
inet-pcap/: Cargo.toml
inet-pcap/src/: api.rs  blocks.rs  config.rs  lib.rs  linktype.rs  tests.rs
inet-pcap/tests/: common.rs  ipv6.ndl  ipv6.rs  ipv6.yml  ipv6_tcp.rs  ipv6_tentative_addrs.rs  ipv6_timeouts.rs
inet-rip/: Cargo.toml
inet-rip/src/: lib.rs  pkt.rs
inet-types/: Cargo.toml
inet-types/src/: arp.rs  icmp.rs  icmpv4.rs  icmpv6.rs  iface.rs  lib.rs  (+4 more)
inet-uds/: Cargo.toml
inet/src/: ctx.rs  lib.rs  libpcap.rs  macros.rs  plugin.rs
inet/src/arp/: api.rs  mod.rs  table.rs
inet/src/dhcp/: client.rs  common.rs  mod.rs  server.rs
inet/src/dns/: api.rs  mod.rs  resolver.rs  zonefile.rs
inet/src/dns/nameserver/: db.rs  iterative.rs  mod.rs  recursive.rs
inet/src/extensions/: api.rs  mod.rs
inet/src/fs/: mod.rs
inet/src/icmp/: mod.rs  ping.rs
inet/src/interface/: addrs.rs  api.rs  device.rs  flags.rs  mod.rs  types.rs  util.rs
inet/src/io/: interest.rs
inet/src/ipv6/: api.rs  cfg.rs  icmp.rs  mld.rs  mod.rs  ndp.rs  state.rs  timer.rs  util.rs
inet/src/ipv6/addrs/: api.rs  mod.rs
inet/src/ipv6/icmp/: mod.rs  ping.rs  tracerouter.rs
inet/src/ipv6/router/: api.rs  mod.rs
inet/src/pcap/: api.rs  blocks.rs  mod.rs
inet/src/routing/: api.rs  fwdv4.rs  mod.rs  tablev6.rs
inet/src/socket/: mod.rs  raw.rs  types.rs
inet/src/tcp/: buffer.rs  config.rs  interest.rs  mod.rs  util.rs
inet/src/tcp/api/: listener.rs  mod.rs  socket.rs  stream.rs
inet/src/tcp/api/stream/: owned_half.rs  ref_half.rs
inet/src/tcp2/: TODO.md  connection.rs  interest.rs  listener.rs  mod.rs  sender.rs  stream.rs
inet/src/tcp2/api/: stream.rs
inet/src/tcp2/connection/: cfg.rs  cong.rs  mod.rs  reorder.rs
inet/src/tcp2/tests/: common.rs  cong.rs  data_transfer.rs  handshake.rs  mod.rs  rtt.rs  shutdown.rs
inet/src/tcp2/tests/captures/: client.pcapng  mod.rs
inet/src/tcp2/tests/connection/: common.rs  cong.rs  data_transfer.rs  handshake.rs  icmp.rs  mod.rs  out_of_order.rs  reorder.rs  rst.rs  shutdown.rs
inet/src/tcp2/tests/stream/: mod.rs  transmit.rs
inet/src/udp/: api.rs  mod.rs
inet/src/uds/: dgram.rs
inet/src/uds/stream/: buf.rs  listener.rs  mod.rs  stream.rs
inet/src/utils/: getip.rs  netstat.rs  switch.rs
inet/tests/: a-play.rs  a-tcp2.rs  arp.rs  common.rs  dns-basic.rs  emit.ndl  emit.yml  ext.rs  icmpv6_ping.ndl  icmpv6_ping.rs  icmpv6_ping.yml  icmpv6_traceroute.ndl  icmpv6_traceroute.par  icmpv6_traceroute.rs  icmpv6_traceroute.yml  interfaces.rs  ipv6-two-nets.rs  ipv6_tentative_addr.rs  ipv6_two_nets.ndl  ipv6_two_nets.par  ipv6_two_nets.par.yml  ipv6_two_nets.rs  ipv6_two_nets.yml  main.ndl  main.yml  pingpong.ndl  pingpong.yml  raw-ip-socket.rs  routing-info.rs  tcp-close-data-complete.rs  tcp-echo-100k.rs  tcp-lan-v4.rs  tcp-lan-v6.rs  tcp-listen-backlog.rs  tcp-missing-data-at-close.rs  tcp-multi-accept.ndl  tcp-multi-accept.rs  tcp-multi-accept.yml  tcp-partial-mtu-at-close.rs  tcp-rst-closed-port.rs  (+18 more)
inet/tests/arp/: main.ndl  main.yml  v4.par  v4.par.yml  v6.par.yml
inet/tests/dns-basic/: main.par
inet/tests/dns-basic/zonefiles/: example.org.dns
inet/tests/tcp-lan/: main.ndl  v4.par.yml  v6.par.yml
inet/tests/udp-broadcast/: main.ndl  main.par.yml  main.yml
inet/tests/udp-routed/: main.ndl  main.par.yml  main.yml
inet/tests/udp-zerobind/: main.ndl  main.par  main.par.yml
routing_bin/: Main.ndl  Main.par  main.rs
scripts/: .tcp_plotting.py.swp  tcp_plotting.py  tcp_plotting2.py  tcp_plotting3.py
src/: ctx.rs  debug.rs  dhcp.rs  ip.rs  lib.rs  macros.rs  plugin.rs  socket.rs  udp.rs
tests/: Tcp.ndl  _tcp_accidenta_fast_open.rs  _tcp_placeholder.rs  arp.rs  common.rs  dns-basic.rs  interfaces.rs  pingpong.ndl  raw-ip-socket.rs  routing-info.rs  routing_info.rs  tcp-close-data-complete.rs  tcp-echo-100k.rs  tcp-lan-v4.rs  tcp-lan-v6.rs  tcp-listen-backlog.rs  tcp-missing-data-at-close.rs  tcp-multi-accept.ndl  tcp-multi-accept.rs  tcp-partial-mtu-at-close.rs  tcp-rst-closed-port.rs  tcp-simultaneous-close.rs  tcp2.ndl  tcp_accidenta_fast_open.rs  tcp_close_data_complete.rs  tcp_echo_100k.rs  tcp_missing_data_at_close.rs  tcp_partial_mtu_at_close.rs  tcp_simultaneous_close.rs  triangle.ndl  udp-broadcast.rs  udp-busysend.rs  udp-lan-v4.rs  udp-lan-v6.rs  udp-lan.rs  udp-pingpong.rs  udp-routed.rs  udp-select.rs  udp-zerobind.rs  udp_pingpong.rs  (+3 more)
(+250 files in other folders)
