[workspace]
members = [
    "inet",
    "inet-bgp",
    "inet-rip",
    "inet-pcap",
    "inet-types",
    "inet-dns",
    "inet-uds",
    "util/*",
    "examples/*",
    "inet-dns-2",
]

[patch.crates-io]
# des = { git = "https://github.com/PetrichorIT/des", branch = "beta"}
des = { path = "../des/des" }
