[package]
name = "inet-bgp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "bgp"
path = "bin/pkt.rs"

[dependencies]
inet = { path = "../inet", features = ["pcap"]}
bytepack = { path = "../bytepack"}
des = "*"
async-trait = "*"
tracing = "0.1.37"
tokio = "*"
futures = "*"