[package]
name = "inet-bgp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "bgp"
path = "bin/bgp.rs"

[dependencies]
inet = { path = "../inet" }
inet-pcap = { path = "../inet-pcap" }
bytepack = { path = "../bytepack" }
des = { version = "*", features = ["full"] }
fxhash = "*"
async-trait = "*"
tracing = { version = "*", features = [
    "max_level_trace",
    "release_max_level_trace",
] }
tokio = "*"
