[package]
name = "inet-pcap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytepack = { path = "../util/bytepack" }
des = "*"
inet-types = { path = "../inet-types" }
inet = { path = "../inet", features = ["libpcap"] }
tracing = "*"
tokio = "*"
serial_test = "*"
pcapng = { path = "../util/pcapng" }
