[package]
name = "inet-pcap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
des = "*"
inet = { path = "../inet", features = ["libpcap"] }
tracing = "*"
tokio = "*"
serial_test = "*"
bytepack = { path = "../util/bytepack" }
types = { path = "../util/types" }
pcapng = { path = "../util/pcapng", features = ["test-util"] }
