[package]
edition = "2021"
name = "inet"
version = "0.1.0"

[features]
full = ["uds", "dhcp"]

default = []
uds = ["inet-types/uds"]
dhcp = []
libpcap = []

[dependencies]
async-trait = "*"
fxhash = "0.2.1"
des = { version = "*", features = ["full"] }
tokio = "*"
tracing = { version = "*" }
bytes = "1.4.0"
rand = "0.8.5"
inet-types = { path = "../inet-types" }
bytepack = { path = "../bytepack" }

[dev-dependencies]
serial_test = "2.0.0"
